JJ/logs/ppo-gpu_2092255.out
==========================================
SLURM_JOB_ID = 2092255
SLURM_JOB_NODELIST = b17-16
TMPDIR = /tmp/SLURM_2092255
==========================================
Traceback (most recent call last):
  File "/home1/jiajinzh/Dynamic-tendon-Leg/JJ/linear.py", line 4, in <module>
    from env import train_env
  File "/home1/jiajinzh/Dynamic-tendon-Leg/JJ/env.py", line 206
    folder = f'LegEnv_{datetime.now().strftime("%b%d")}_{growth_type}_{algorithm}"
             ^
SyntaxError: unterminated string literal (detected at line 206)
